map fixed on small displays

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -137,6 +137,26 @@ html {
         justify-content: center;
     }
 
+    .flex-item{
+        flex: 50%;
+    }
+
+    @media screen and (max-width: $breakpoint-medium) {
+        .flex-container {
+            display: block;
+        }
+        #hoop1 {
+            margin-top: 50px;
+            margin-left: 25%;
+        }
+        #mapbody {
+            margin-left: auto;
+            margin-right: auto;
+
+        }
+    }
+
+
     $rad1: 50vw;
     $thick1: calc($rad1 / 60);
 
@@ -145,10 +165,10 @@ html {
 
 
     #mapbody {
-        padding: calc($rad1 / 2.5) 5vw 0 5vw;
+        position: relative;
         width: 80%;
         text-align: center;
-
+        padding-top: 20vh;
         p {
             position: relative;
             width: 80%;
